--- a/src/views/about.ejs
+++ b/src/views/about.ejs
@@ -1,4 +1,4 @@
-<%- include("partials/navbar") %>
+<%- include("../partials/navbar") %>
 
 <h2>About Us</h2>
 <p>This portal provides professional development courses.</p>
@@ -6,4 +6,4 @@
 <p>Our courses are industry oriented.</p>
 <p>Learn and grow your career with us.</p>
 
-<%- include("partials/footer") %>
+<%- include("../partials/footer") %>
