--- a/src/views/course-details.ejs
+++ b/src/views/course-details.ejs
@@ -1,4 +1,4 @@
-<%- include("partials/navbar") %>
+<%- include("../partials/navbar") %>
 
 <h2><%= course.name %></h2>
 <p>Duration: <%= course.duration %></p>
@@ -6,4 +6,4 @@
 
 <a href="/courses">Back</a>
 
-<%- include("partials/footer") %>
+<%- include("../partials/footer") %>
