--- a/src/views/courses.ejs
+++ b/src/views/courses.ejs
@@ -1,4 +1,4 @@
-<%- include("partials/navbar") %>
+<%- include("../partials/navbar") %>
 
 <h2>All Courses</h2>
 
@@ -12,4 +12,4 @@
   <hr>
 <% }) %>
 
-<%- include("partials/footer") %>
+<%- include("../partials/footer") %>
