--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -1,6 +1,6 @@
-<%- include("partials/navbar") %>
+<%- include("../partials/navbar") %>
 
 <h1>Course Portal</h1>
 <p>Total Courses: <%= total %></p>
 
-<%- include("partials/footer") %>
+<%- include("../partials/footer") %>
